added captions to the projects

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- title -->
-    <title>Gloria Givondo - Web Developer</title>
+    <title>Gloria Givondo - Full Stack Developer</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="image/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
@@ -50,7 +50,7 @@
     <div class="section full-height over-hide">
         <div class="switch-wrap">
             <h1>gloria givondo</h1>
-            <h2>Web Developer</h2>
+            <h2>Full Stack Developer</h2>
             <div id="switch" class="hover-target">
                 <div id="circle"></div>
             </div>
@@ -72,7 +72,7 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-                    <img src="image/profileme.JPG" alt="Gloria Givondo" class="img-fluid">
+                    <img src="image/profileme.JPG" alt="Gloria Givondo" id="me" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -87,27 +87,15 @@
                     </div>
                 </div>
             </div>
-            <!-- M -->
             <div class="row">
-                <div class="col-sm-5 ">
-                    <div class="card">
-                        <img src="image/newsarena.png" alt="newsarena" class="img-fluid">
-                    </div>
+                <div class="col-sm-4">
+                    <img src="image/newsarena.png" alt="NewsArena is an application that lists and previews news articles from various sources." id="ip"class="img-fluid">
                 </div>
-                <div class="col-sm-5">
-                    <div class="card">
-                        <img src="image/quotes.png" alt="quotes" class="img-fluid">
-                    </div>
+                <div class="col-sm-4">
+                    <img src="image/quotes.png" alt="Quotes is a web-page that users enter their quotes,  up-vote for their favorites and down-vote the awful ones." id="ip" class="img-fluid">
                 </div>
-                <div class="col-sm-5">
-                    <div class="card">
-                        <img src="image/triangle-tracker.png" alt="quotes" class="img-fluid">
-                    </div>
-                </div>
-                <div class="col-sm-5">
-                    <div class="card">
-                        <img src="image/password-locker.png" alt="quotes" class="img-fluid">
-                    </div>
+                <div class="col-sm-4">
+                    <img src="image/password.jpg" alt="Password locker is a terminal application that allows users to generate and store passwords for various accounts." id="ip" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -235,7 +223,7 @@
     </div>
 <!-- footer -->
 <footer class="text-center text-muted">
-    <p><i class="far fa-copyright"></i> Gloria Givondo. All Rights Reserved</p>
+    <p><i class="far fa-copyright"></i>2019 All Rights Reserved</p>
 </footer>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="js/scripts.js"></script>
