--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- meta tags -->
     <meta charset="UTF-8">
@@ -9,12 +10,13 @@
     <title>Gloria Givondo - Full Stack Developer</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="image/icon.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <!-- preloader -->
     <div class="loader_bg">
@@ -68,7 +70,9 @@
                     <div class="profile text-left">
                         <h3>Gloria Givondo</h3>
                         <h4>Full Stack Developer</h4>
-                        <p>I've always had a fascination to want to know what happens behind the screen. Through this came design and development. As a Full Stack developer, my skills are broad from front-end to back-end development. I enjoy every aspect of it.</p>
+                        <p>I've always had a fascination to want to know what happens behind the screen. Through this
+                            came design and development. As a Full Stack developer, my skills are broad from front-end
+                            to back-end development. I enjoy every aspect of it.</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
@@ -89,17 +93,89 @@
             </div>
             <div class="row">
                 <div class="col-sm-4">
-                    <img src="image/newsarena.png" alt="NewsArena is an application that lists and previews news articles from various sources." id="ip"class="img-fluid">
+                    <a>
+                        <img src="image/newsarena.png" alt="NewsArena" id="ip" class="img-fluid" data-toggle="modal" data-target="#exampleModalCenter">
+                    </a>
+                </div>
+                <!-- The Modal -->
+                <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalCenterTitle">NewsArena</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <img src="image/newsarena.png" alt="" class="img-fluid">
+                                <p>This is an application that lists and previews news articles from various sources.</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary"><a href="https://news-arena.herokuapp.com/" class="text-white">VIEW SITE</a></button>
+                                <button type="button" class="btn btn-primary text-white"><a href="https://github.com/GeGe-K/News-Highlights" class="text-white">GITHUB</a></button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-sm-4">
-                    <img src="image/quotes.png" alt="Quotes is a web-page that users enter their quotes,  up-vote for their favorites and down-vote the awful ones." id="ip" class="img-fluid">
+                    <a>
+                        <img src="image/quotes.png" alt="Quotes" id="ip" class="img-fluid" data-toggle="modal" data-target="#quotes">
+                    </a>
+                </div>
+                <!-- The Modal -->
+                <div class="modal fade" id="quotes" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalCenterTitle">Quotes</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <img src="image/quotes.png" alt="" class="img-fluid">
+                                <p>Quotes is a web-page that users enter their quotes, up-vote for their favorites and down-vote the awful ones.</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary"><a href="https://gege-k.github.io/Quotes/"
+                                        class="text-white">VIEW SITE</a></button>
+                                <button type="button" class="btn btn-primary text-white"><a
+                                        href="https://github.com/GeGe-K/Quotes" class="text-white">GITHUB</a></button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-sm-4">
-                    <img src="image/password.jpg" alt="Password locker is a terminal application that allows users to generate and store passwords for various accounts." id="ip" class="img-fluid">
+                    <a>
+                        <img src="image/password.jpg" alt="Password locker" class="img-fluid" data-toggle="modal" data-target="#locker">
+                    </a>
+                </div>
+                <!-- The Modal -->
+                <div class="modal fade" id="locker" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalCenterTitle">Password Locker</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <img src="image/password.jpg" alt="" class="img-fluid">
+                                <p>Password Locker is a terminal application that allows users to generate and store passwords for various accounts."</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-primary text-white"><a href="https://github.com/GeGe-K/pass-locker" class="text-white">GITHUB</a></button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-     </div>
+    </div>
     <!-- Skill -->
     <div id="skills" class="skill-area section-padding my-5">
         <div class="container">
@@ -145,7 +221,7 @@
                 </div>
                 <div class="col-md-4 text-center item">
                     <div class="skill-icon">
-                    <i class="fab fa-python"></i>
+                        <i class="fab fa-python"></i>
                     </div>
                     <div class="skill-content">
                         <h4>Python</h4>
@@ -153,7 +229,7 @@
                 </div>
                 <div class="col-md-4 text-center item">
                     <div class="skill-icon">
-                    <i class="fab fa-python"></i>
+                        <i class="fab fa-python"></i>
                     </div>
                     <div class="skill-content">
                         <h4>Flask</h4>
@@ -161,7 +237,7 @@
                 </div>
                 <div class="col-md-4 text-center item">
                     <div class="skill-icon">
-                    <i class="fab fa-python"></i>
+                        <i class="fab fa-python"></i>
                     </div>
                     <div class="skill-content">
                         <h4>Django</h4>
@@ -203,7 +279,7 @@
                         <h3>Email</h3>
                         <p>gloriagivondo@gmail.com</p>
                     </div>
-                </div> 
+                </div>
                 <div class="col-md-4 col-sm-12">
                     <div class="single-contact text-center wow fadeInDown" data-wow-delay="0.4s">
                         <i class="fab fa-linkedin-in"></i>
@@ -221,11 +297,18 @@
             </div>
         </div>
     </div>
-<!-- footer -->
-<footer class="text-center text-muted">
-    <p><i class="far fa-copyright"></i>2019 All Rights Reserved</p>
-</footer>
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script src="js/scripts.js"></script>
+    <!-- footer -->
+    <footer class="text-center text-muted">
+        <p><i class="far fa-copyright"></i>2019 All Rights Reserved</p>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="js/scripts.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
