--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-xs-12 col-sm-6 col-lg-6">
-                    <div class="profile text-left">
+                    <div class="profile text-right">
                         <h3>Gloria Givondo</h3>
                         <h4>Full Stack Developer</h4>
                         <p>I've always had a fascination to want to know what happens behind the screen. Through this
@@ -102,14 +102,14 @@
                     <div class="modal-dialog modal-dialog-centered" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalCenterTitle">NewsArena</h5>
+                                <h4 class="modal-title" id="exampleModalCenterTitle">NewsArena</h4>
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
                             </div>
                             <div class="modal-body">
                                 <img src="image/newsarena.png" alt="" class="img-fluid">
-                                <p>This is an application that lists and previews news articles from various sources.</p>
+                                <p class="text-dark">This is an application that lists and previews news articles from various sources.</p>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary"><a href="https://news-arena.herokuapp.com/" class="text-white">VIEW SITE</a></button>
@@ -129,14 +129,14 @@
                     <div class="modal-dialog modal-dialog-centered" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalCenterTitle">Quotes</h5>
+                                <h4 class="modal-title" id="exampleModalCenterTitle">Quotes</h4>
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
                             </div>
                             <div class="modal-body">
                                 <img src="image/quotes.png" alt="" class="img-fluid">
-                                <p>Quotes is a web-page that users enter their quotes, up-vote for their favorites and down-vote the awful ones.</p>
+                                <p class="text-dark">Quotes is a web-page that users enter their quotes, up-vote for their favorites and down-vote the awful ones.</p>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary"><a href="https://gege-k.github.io/Quotes/"
@@ -149,7 +149,7 @@
                 </div>
                 <div class="col-sm-4">
                     <a>
-                        <img src="image/password.jpg" alt="Password locker" class="img-fluid" data-toggle="modal" data-target="#locker">
+                        <img src="image/password.jpg" id="ip" alt="Password locker" class="img-fluid" data-toggle="modal" data-target="#locker">
                     </a>
                 </div>
                 <!-- The Modal -->
@@ -158,14 +158,14 @@
                     <div class="modal-dialog modal-dialog-centered" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalCenterTitle">Password Locker</h5>
+                                <h4 class="modal-title" id="exampleModalCenterTitle">Password Locker</h4>
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
                             </div>
                             <div class="modal-body">
                                 <img src="image/password.jpg" alt="" class="img-fluid">
-                                <p>Password Locker is a terminal application that allows users to generate and store passwords for various accounts."</p>
+                                <p class="text-dark">Password Locker is a terminal application that allows users to generate and store passwords for various accounts."</p>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-primary text-white"><a href="https://github.com/GeGe-K/pass-locker" class="text-white">GITHUB</a></button>
@@ -185,6 +185,32 @@
                         <h3 class="mb-3">My Skills</h3>
                     </div>
                 </div>
+            </div>
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="..." class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="..." class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="..." class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
             <div class="row">
                 <div class="col-md-4 text-center item">
@@ -274,21 +300,21 @@
             </div>
             <div class="row">
                 <div class="col-md-4 col-sm-12">
-                    <div class="single-contact text-center wow fadeInDown" data-wow-delay="0.2s">
+                    <div class="single-contact text-center">
                         <i class="fas fa-envelope-square"></i>
                         <h3>Email</h3>
                         <p>gloriagivondo@gmail.com</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-12">
-                    <div class="single-contact text-center wow fadeInDown" data-wow-delay="0.4s">
+                    <div class="single-contact text-center">
                         <i class="fab fa-linkedin-in"></i>
                         <h3>LinkedIn</h3>
                         <p><a href="https://www.linkedin.com/in/gloria-givondo-56211b17a/">LinkedIn</a></p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-12">
-                    <div class="single-contact text-center wow fadeInDown" data-wow-delay="0.6s">
+                    <div class="single-contact text-center">
                         <i class="fab fa-github-square"></i>
                         <h3>Github</h3>
                         <p><a href="https://github.com/GeGe-K">Github</a></p>
